--- a/tasks/snmp.yml
+++ b/tasks/snmp.yml
@@ -12,7 +12,7 @@
   with_command: "-config.file=/snmp.yml"
   volume:
   - "{{promfriends_config_path}}/snmp.yml:/etc/snmp_exporter/snmp.yml"
-  changed: snmp_config.changed
+  changed: "{{snmp_config.changed}}"
 - name: "detect snmp exporter ip address"
   command: >
     docker inspect --format \{\{.NetworkSettings.IPAddress\}\} prom_snmp
