--- a/tasks/blackbox.yml
+++ b/tasks/blackbox.yml
@@ -1,3 +1,4 @@
+---
 - name: "generate blackbox config"
   template:
     src: '{{promfriends_config|default("blackbox.yml")}}'
@@ -8,11 +9,11 @@
   image: "prom/blackbox-exporter"
   use_command: "-config.file=/blackbox.yml"
   volume:
-  - "{{promfriends_config_path}}/blackbox.yml:/blackbox.yml"
+    - "{{promfriends_config_path}}/blackbox.yml:/blackbox.yml"
   changed: "{{blackbox_config.changed}}"
 - name: "detect blackbox exporter ip"
   command: >
     docker inspect --format \{\{.NetworkSettings.IPAddress\}\} prom_blackbox
-  ignore_errors: yes
+  ignore_errors: true
   register: promfriends_blackbox_ip
-  changed_when: no
+  changed_when: false
