--- a/tasks/blackbox.yml
+++ b/tasks/blackbox.yml
@@ -4,13 +4,16 @@
     src: '{{promfriends_config|default("blackbox.yml")}}'
     dest: "{{promfriends_config_path}}/blackbox.yml"
   register: blackbox_config
-- include: "docker.yml"
-  context: "prom_blackbox"
-  image: "prom/blackbox-exporter"
-  use_command: "--config.file=/blackbox.yml"
-  volume:
-    - "{{promfriends_config_path}}/blackbox.yml:/blackbox.yml"
-  changed: "{{blackbox_config.changed}}"
+
+- include_tasks: "docker.yml"
+  vars:
+    context: "prom_blackbox"
+    image: "prom/blackbox-exporter"
+    use_command: "--config.file=/blackbox.yml"
+    volume:
+      - "{{promfriends_config_path}}/blackbox.yml:/blackbox.yml"
+    changed: "{{blackbox_config.changed}}"
+
 - name: "detect blackbox exporter ip"
   command: >
     docker inspect --format \{\{.NetworkSettings.IPAddress\}\} prom_blackbox
