--- a/tasks/cloudwatch.yml
+++ b/tasks/cloudwatch.yml
@@ -8,16 +8,19 @@
     mode: "0660"
   register: pfcwc_config
   with_items: "{{promcw_config}}"
-- include: "docker.yml"
-  context: "prom_cloudwatch-{{item.item.region}}"
-  image: "prom/cloudwatch-exporter"
-  volume:
-    - "{{promfriends_config_path}}/cloudwatch-{{item.item.region}}.yml:/config.yml"
-  use_env:
-    AWS_SECRET_ACCESS_KEY: "{{promcw_aws_secret}}"
-    AWS_ACCESS_KEY_ID: "{{promcw_aws_key}}"
-  changed: "{{item.changed}}"
+
+- include_tasks: "docker.yml"
+  vars:
+    context: "prom_cloudwatch-{{item.item.region}}"
+    image: "prom/cloudwatch-exporter"
+    volume:
+      - "{{promfriends_config_path}}/cloudwatch-{{item.item.region}}.yml:/config.yml"
+    use_env:
+      AWS_SECRET_ACCESS_KEY: "{{promcw_aws_secret}}"
+      AWS_ACCESS_KEY_ID: "{{promcw_aws_key}}"
+      changed: "{{item.changed}}"
   with_items: "{{pfcwc_config.results}}"
+
 - name: "detect cloduwatch exporter ips"
   command: >
     docker inspect --format \{\{.NetworkSettings.IPAddress\}\}
