--- a/tasks/cadvisor.yml
+++ b/tasks/cadvisor.yml
@@ -1,16 +1,18 @@
 ---
-- include: "docker.yml"
-  context: "cadvisor"
-  image: "google/cadvisor"
-  publish:
-    - "{{promfriends_docker_host}}:8080:8080"
-  volume:
-    - "/sys:/sys:ro"
-    - "/var/lib/docker/:/var/lib/docker:ro"
-    - "/var/run:/var/run:rw"
-    - "/:/rootfs:ro"
-  labels:
-    nolog: "true"
+- include_tasks: "docker.yml"
+  vars:
+    context: "cadvisor"
+    image: "google/cadvisor"
+    publish:
+      - "{{promfriends_docker_host}}:8080:8080"
+    volume:
+      - "/sys:/sys:ro"
+      - "/var/lib/docker/:/var/lib/docker:ro"
+      - "/var/run:/var/run:rw"
+      - "/:/rootfs:ro"
+    labels:
+  nolog: "true"
+
 - name: "detect cadvisor exporter ip address"
   command: >
     docker inspect --format \{\{.NetworkSettings.IPAddress\}\} cadvisor
