--- a/tasks/core.yml
+++ b/tasks/core.yml
@@ -5,6 +5,7 @@
     owner: "{{prometheus_container_user}}"
     group: "{{prometheus_container_group}}"
     mode: "0770"
+    state: "directory"
 
 - name: "generate prometheus configuration"
   template:
@@ -30,7 +31,7 @@
     context: "{{prometheus_docker_name}}"
     image: "prom/prometheus:{{prometheus_version}}"
     publish:
-      - "{{lookup('dig', promfriends_docker_host)}}:9090:9090"
+      - "{{ansible_default_ipv4.address}}:9090:9090"
     volume:
       - "{{promfriends_config_path}}:/etc/prometheus"
       - "{{prometheus_data_path}}:/prometheus"
@@ -39,6 +40,5 @@
       --config.file=/etc/prometheus/prometheus.yml
       --storage.tsdb.path=/prometheus
     changed: "{{prom_config.changed}}"
-    user: |
-      {{getent_passwd[prometheus_container_user][1]}}
-      :{{getent_group[prometheus_container_group][2]}}
+    container_groups:
+      - "{{getent_group[prometheus_container_group][1]}}"
