--- a/tasks/docker.yml
+++ b/tasks/docker.yml
@@ -39,6 +39,7 @@
     ssl_version: "TLS"  # whut
     user: "{{user|default(prometheus_container_uid)}}"
     groups: "{{[prometheus_container_gid] + container_groups|default([])}}"
+    network_mode: "host"
   when: >
     (container_check.rc == 1 or
     container_check.stdout == "false" or
